--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 <div class="row" id="hanu2" style="display:none;">
 <div class="col-1">
   <div class="col-3">
-    <img src="images/auth1.jpg" style="box-shadow: 5px 5px 5px #ddd">
+	  <center><img src="images/auth1.jpg" style="box-shadow: 5px 5px 5px #ddd"></center>
   </div>
   <div class="col-3">
   <center>
@@ -89,7 +89,7 @@
 
 <div class="col-1">
     <div class="col-3">
-      <img src="images/auth2.jpg" style="box-shadow: 5px 5px 5px #ddd">
+      <center><img src="images/auth2.jpg" style="box-shadow: 5px 5px 5px #ddd"></center>
     </div>
     <div class="col-3">
 	<center>
@@ -105,7 +105,7 @@
 
 <div class="col-1">
     <div class="col-3">
-      <img src="images/auth3.jpg" style="box-shadow: 5px 5px 5px #ddd">
+      <center><img src="images/auth3.jpg" style="box-shadow: 5px 5px 5px #ddd"></center>
     </div>
     <div class="col-3">
 	<center>
@@ -121,7 +121,7 @@
 
 <div class="col-1">
     <div class="col-3">
-      <img src="images/auth4.jpg" style="box-shadow: 5px 5px 5px #ddd">
+      <center><img src="images/auth4.jpg" style="box-shadow: 5px 5px 5px #ddd"></center>
     </div>
     <div class="col-3">
 	<center>
