--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
   </div>
 
   <div class="col-3" style="border:1px solid #341060; border-radius: 0px 0px 20px  0px">
-    <p style="text-align:justify; font-size:14px; font-family:Helvetica;">Ritchie was an American computer scientist. He created the C programming language and, with long-time colleague Ken Thompson, the Unix operating system. Ritchie and Thompson were awarded the Turing Award from the ACM in 1983, the Hamming Medal from the IEEE in 1990 and the National Medal of Technology from President Bill Clinton in 1999. Ritchie was the head of Lucent Technologies System Software Research Department when he retired in 2007. He was the "R" in K&R C, and commonly known by his username dmr. </p>
+	  <span style="color:blue;font-size:20px;font-weight:700">R</span><p style="text-align:justify; font-size:14px; font-family:Helvetica;">itchie was an American computer scientist. He created the C programming language and, with long-time colleague Ken Thompson, the Unix operating system. Ritchie and Thompson were awarded the Turing Award from the ACM in 1983, the Hamming Medal from the IEEE in 1990 and the National Medal of Technology from President Bill Clinton in 1999. Ritchie was the head of Lucent Technologies System Software Research Department when he retired in 2007. He was the "R" in K&R C, and commonly known by his username dmr. </p>
   </div>
 </div>
 
