--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
   </div>
 
   <div class="col-3" style="border:1px solid #341060; border-radius: 0px 0px 20px  0px">
-	  <p style="text-align:justify; font-size:14px; font-family:Helvetica;"><span style="color:blue;font-size:20px;font-weight:700">R</span>itchie was an American computer scientist. He created the C programming language and, with long-time colleague Ken Thompson, the Unix operating system. Ritchie and Thompson were awarded the Turing Award from the ACM in 1983, the Hamming Medal from the IEEE in 1990 and the National Medal of Technology from President Bill Clinton in 1999. Ritchie was the head of Lucent Technologies System Software Research Department when he retired in 2007. He was the "R" in K&R C, and commonly known by his username dmr. </p>
+	  <p style="text-align:justify; font-size:14px; font-family:Helvetica;"><span style="color:#341060;font-size:20px;font-weight:700">R</span>itchie was an American computer scientist. He created the C programming language and, with long-time colleague Ken Thompson, the Unix operating system. Ritchie and Thompson were awarded the Turing Award from the ACM in 1983, the Hamming Medal from the IEEE in 1990 and the National Medal of Technology from President Bill Clinton in 1999. Ritchie was the head of Lucent Technologies System Software Research Department when he retired in 2007. He was the "R" in K&R C, and commonly known by his username dmr. </p>
   </div>
 </div>
 
@@ -99,7 +99,7 @@
     </div>
 
     <div class="col-3" style="border:1px solid #341060; border-radius: 0px 0px 20px  0px">
-      <p style="text-align:justify; font-size:14px; font-family:Helvetica;">Timothy John Berners-Lee OM KBE FRS FREng FRSA FBCS also known as TimBL, is an English engineer and computer scientist, best known as the inventor of the World Wide Web. He is currently a Professor of Computer Science at the University of Oxford.He made a proposal for an information management system in March 1989, and he implemented the first successful communication between a Hypertext Transfer Protocol (HTTP) client and server via the internet in mid-November the same year. </p>
+      <p style="text-align:justify; font-size:14px; font-family:Helvetica;"><span style="color:#341060;font-size:20px;font-weight:700">T</span>imothy John Berners-Lee OM KBE FRS FREng FRSA FBCS also known as TimBL, is an English engineer and computer scientist, best known as the inventor of the World Wide Web. He is currently a Professor of Computer Science at the University of Oxford.He made a proposal for an information management system in March 1989, and he implemented the first successful communication between a Hypertext Transfer Protocol (HTTP) client and server via the internet in mid-November the same year. </p>
     </div>
   </div>
 
@@ -115,7 +115,7 @@
     </div>
 
     <div class="col-3" style="border:1px solid #341060; border-radius: 0px 0px 20px  0px">
-      <p style="text-align:justify; font-size:14px; font-family:Helvetica;">Bjarne Stroustrup is a Danish computer scientist, who is most notable for the creation and development of the widely used C++ programming language.He is a visiting professor at Columbia University, and works at Morgan Stanley as a Managing Director in New York. </p>
+      <p style="text-align:justify; font-size:14px; font-family:Helvetica;"><span style="color:#341060;font-size:20px;font-weight:700">B</span>jarne Stroustrup is a Danish computer scientist, who is most notable for the creation and development of the widely used C++ programming language.He is a visiting professor at Columbia University, and works at Morgan Stanley as a Managing Director in New York. </p>
     </div>
   </div>
 
@@ -130,7 +130,7 @@
 	  </center>
     </div>
     <div class="col-3" style="border:1px solid #341060; border-radius: 0px 0px 20px  0px">
-      <p style="text-align:justify; font-size:14px; font-family:Helvetica;">Rasmus Lerdorf is a Danish-Canadian programmer. He created the PHP scripting language, authoring the first two versions of the language and participated in the development of later versions led by a group of developers including Jim Winstead (who later created blo.gs), Stig Bakken, Shane Caraveo, Andi Gutmans, and Zeev Suraski. He continues to contribute to the project. </p>
+      <p style="text-align:justify; font-size:14px; font-family:Helvetica;"><span style="color:#341060;font-size:20px;font-weight:700">R</span>asmus Lerdorf is a Danish-Canadian programmer. He created the PHP scripting language, authoring the first two versions of the language and participated in the development of later versions led by a group of developers including Jim Winstead (who later created blo.gs), Stig Bakken, Shane Caraveo, Andi Gutmans, and Zeev Suraski. He continues to contribute to the project. </p>
     </div>
   </div>
 </div>
