--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
 <div class="row" id="hanu">
   <center>
+	  <div class="col-6"> </div>
     <div class="col-2" style=" border:2px solid #ddd;margin:1%; box-shadow:3px 3px 3px #ddd">
       <img src="images/c.jpg" style="box-shadow: 5px 5px 5px #ddd;"> <br><br>
       <label style="font-size:24px; font-weight:700; font-family:Helvetica; text-shadow:3px 3px 3px #ddd"> C </label><br>
