--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
 <div class="row" id="hanu">
   <center>
+	  <div class="col-1">
 	  <div class="col-6"> </div>
     <div class="col-2" style=" border:2px solid #ddd;margin:1%; box-shadow:3px 3px 3px #ddd">
       <img src="images/c.jpg" style="box-shadow: 5px 5px 5px #ddd;"> <br><br>
@@ -43,7 +44,9 @@
       <label style="font-size:24px; font-weight:700; font-family:Helvetica; text-shadow:3px 3px 3px #ddd"> Python</label><br>
 	  <button type="button"> ADD TO CART </button>
     </div>
-
+	  </div>
+	  <div class="col-1">
+		  <div class="col-6"> </div>
     <div class="col-2" style=" border:2px solid #ddd;margin:1%; box-shadow:3px 3px 3px #ddd">
       <img src="images/js.jpg" style="box-shadow: 5px 5px 5px #ddd"> <br><br>
       <label style="font-size:24px; font-weight:700; font-family:Helvetica; text-shadow:3px 3px 3px #ddd"> JS </label><br>
@@ -67,6 +70,7 @@
       <label style="font-size:24px; font-weight:700; font-family:Helvetica; text-shadow:3px 3px 3px #ddd"> Perl </label><br>
 	  <button type="button"> ADD TO CART </button>
     </div>
+	  </div>
 </center>
 </div>
 
