--- a/index.html
+++ b/index.html
@@ -154,6 +154,10 @@
 	 </div>
   </div>
 </center>
-
+<div class="col-1">
+	<div class="footer">
+		Responsive web-Design &copy; 199A-2O1B
+	</div>
+	</div>
 </body>
 </html>
